--- a/GeneralAssignments/nbproject/private/private.properties
+++ b/GeneralAssignments/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\efaux01\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\eliza\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
